# DOAJ_Metadata

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml  quality-benchmark.yml  refresh-snapshots.yml  validate-and-build.yml
benchmarks/: matching_live_cases.json  search_live_cases.json
config/: snapshot_targets.json
docs/: 404.html  app.js  index.html  search_matching_core.js  styles.css
docs/data/: meta.json
docs/data/snapshots/: index.json
docs/data/statistics/: journals.json  summary.json
output/quality/: matching-live-metrics.json  matching-live-report.md  search-live-metrics.json  search-live-report.md
scripts/: quality_helpers.mjs  refresh_snapshots.py  refresh_statistics.py  run_matching_quality_benchmark.mjs  run_search_quality_benchmark.mjs  serve_local.py  validate_static_data.py
src/doaj_metadata_dashboard/: __init__.py  country_continents.py  doaj_api.py  nlp.py  snapshots.py  statistics.py  utils.py
tests/: test_doaj_api.py  test_snapshots.py  test_statistics.py
tests-js/: search_matching_core.test.js
